--- a/reach_web/app/views/layouts/application.html.erb
+++ b/reach_web/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ReachWeb</title>
+  <title>Halo Reach: <%= @title %></title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
