--- a/reach_web/app/views/home/index.html.erb
+++ b/reach_web/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
 <h1>Halo Reach Stats </h1>
 
 <%= link_to "Average Deaths", "average_deaths#index" %>
+<br />
+<%= link_to "Average Kills", "average_kills#index" %>
+<br />
+<%= link_to "Average Spread", "average_spread#index" %>
