reworked the client to just pull in the data and write it to a directory.  created a parser to later go over the downloaded files and put it into objects.  removed the old stats that we displayed with the old data.  created a few new mvc triads for the kill/death spread and the player effectiveness rating.  still working on the json parser test

--- a/app/views/average_spread/index.html.erb
+++ b/app/views/average_spread/index.html.erb
@@ -1,1 +1,20 @@
-<%= render :file => "shared/player_stat.html" %>
+<h1><%= @title %></h1>
+
+<table border="1">
+<tr>
+   <th>Service Tag</th>
+   <th>Kills</th>
+   <th>Deaths</th>
+   <th>Spread</th>
+</tr>
+<% @player_stats.each do |player_stat| %>
+<tr>
+   <td><%= player_stat.service_tag %></td>
+   <td><%= player_stat.kills %></td>
+   <td><%= player_stat.deaths %></td>
+   <td><%= player_stat.spread %></td>
+</tr>
+<% end %>
+</table>
+
+<%= link_to "Home", "home#index" %>
