--- a/app/views/player_effectiveness/index.html.erb
+++ b/app/views/player_effectiveness/index.html.erb
@@ -3,12 +3,14 @@
 <table border="1">
 <tr>
    <th>Service Tag</th>
-   <th><%= @stat_type %></th>
+   <th>Map</th>
+   <th>Effectiveness</th>
 </tr>
 <% @player_stats.each do |player_stat| %>
 <tr>
    <td><%= player_stat.service_tag %></td>
-   <td><%= player_stat.value %></td>
+   <td><%= player_stat.map %></td>
+   <td><%= player_stat.effectiveness %></td>
 </tr>
 <% end %>
 </table>
