--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,6 @@
 <h1>Halo Reach Stats </h1>
 
-<%= link_to "Average Deaths", "average_deaths#index" %>
+<%= link_to "Kill/Death Spread", "kill_death_spread#index" %>
 <br />
-<%= link_to "Average Kills", "average_kills#index" %>
-<br />
-<%= link_to "Average Spread", "average_spread#index" %>
+<%= link_to "Player Effectiveness", "player_effectiveness#index" %>
+
