fixed a few issues with the kill death spread page now that we have slightly different tables

--- a/app/views/kill_death_spread/index.html.erb
+++ b/app/views/kill_death_spread/index.html.erb
@@ -2,14 +2,14 @@
 
 <table border="1">
 <tr>
-   <th>Service Tag</th>
+   <th>Player Name</th>
    <th>Kills</th>
    <th>Deaths</th>
    <th>Spread</th>
 </tr>
 <% @player_stats.each do |player_stat| %>
 <tr>
-   <td><%= player_stat.service_tag %></td>
+   <td><%= player_stat.player_name %></td>
    <td><%= player_stat.kills %></td>
    <td><%= player_stat.deaths %></td>
    <td><%= player_stat.spread %></td>
