--- a/app/views/player_effectiveness/index.html.erb
+++ b/app/views/player_effectiveness/index.html.erb
@@ -2,17 +2,13 @@
 
 <table border="1">
 <tr>
-   <th>Player Name</th>
    <th>Map</th>
-   <th>Effectiveness</th>
 </tr>
-<% @player_stats.each do |player_stat| %>
+<% @maps.each do |map| %>
 <tr>
-   <td><%= player_stat.player_name %></td>
-   <td><%= player_stat.map %></td>
-   <td><%= player_stat.effectiveness %></td>
+   <td><%= link_to map.name, "player_effectiveness/#{map.name}" %></td>
 </tr>
 <% end %>
 </table>
 
-<%= link_to "Home", "home#index" %>
+<%= link_to "Home", "/home#index" %>
